<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".FragmentoGrabadora">

    <!-- CardView para la grabadora -->
    <androidx.cardview.widget.CardView
        android:id="@+id/crdGrabar"
        android:layout_width="250dp"
        android:layout_height="250dp"
        android:layout_margin="16dp"
        app:cardCornerRadius="24dp"
        app:cardElevation="12dp"
        app:cardBackgroundColor="@color/white"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:gravity="center"
            android:orientation="vertical"
            android:padding="24dp">

            <!-- Texto para indicar la función -->
            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="12dp"
                android:gravity="center"
                android:text="@string/grabacion_audio_video"
                android:textColor="@color/black"
                android:textSize="18sp"
                android:textStyle="bold" />

            <!-- Icono de grabación -->
            <ImageView
                android:layout_width="80dp"
                android:layout_height="80dp"
                android:contentDescription="@string/icono_de_grabacion"
                android:src="@android:drawable/ic_btn_speak_now"
                app:tint="@color/holo_red_dark" />

            <!-- Botón para iniciar la grabación -->
            <Button
                android:id="@+id/btnIniciarGrabacion"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="16dp"
                android:padding="12dp"
                android:text="@string/iniciar_grabacion"
                android:textStyle="bold"
                android:backgroundTint="@color/holo_red_dark"
                android:textColor="@android:color/white"
                app:cornerRadius="16dp"/>
        </LinearLayout>
    </androidx.cardview.widget.CardView>
</androidx.constraintlayout.widget.ConstraintLayout>